# linked-list-allocator

./: .travis.yml  Cargo.toml  Changelog.md  README.md
.github/workflows/: build.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: chaos.rs
scripts/: id_rsa.enc  travis-doc-upload.cfg  travis-doc-upload.sh
src/: Insertion_linklist.c  hole.rs  lib.rs  small_hole.rs  test.rs
