[package]
name = "linked_list_allocator"
version = "0.8.9"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
license = "Apache-2.0/MIT"

description = "Simple allocator usable for no_std systems. It builds a linked list from the freed blocks and thus needs no additional data structures."
keywords = ["allocator", "no_std", "malloc", "heap", "kernel"]

repository = "https://github.com/phil-opp/linked-list-allocator"
documentation = "https://docs.rs/crate/linked_list_allocator"
homepage = "http://os.phil-opp.com/kernel-heap.html#a-better-allocator"

[features]
default = ["use_spin", "const_mut_refs"]
use_spin = ["spinning_top"]
alloc_ref = []
const_mut_refs = ["spinning_top/nightly"]

[dependencies.spinning_top]
version = "0.1.0"
optional = true

[package.metadata.release]
no-dev-version = true
pre-release-replacements = [
    { file="Changelog.md", search="# Unreleased", replace="# Unreleased\n\n# {{version}} – {{date}}", exactly=1 },
]
pre-release-commit-message = "Release version {{version}}"
